--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "pg": "^4.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^1.7.11",
-    "serve-favicon": "~2.1.3",
+    "serve-favicon": "~2.1.3"
   }
 }
